--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         </div>
     </header>
     <main>
+        <container class="total">
         <section class="past-failures">
             <img src="/images/person.png" alt="" class="person">
             <div class="past-failures-content">
@@ -73,6 +74,13 @@
                 </div>
              </div>
         </section>
+        <section class="banner2">
+        <div class="banner2-info">
+         <h4 class="banner2-title">Awlays keep a positive mindset</h4>
+         <button class="banner2-button">Call Now</button>
+        </div>
+        </section>
+    </container>
     </main>
     <footer></footer>
 </body>
