--- a/index.html
+++ b/index.html
@@ -82,6 +82,29 @@
         </section>
     </container>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="footer-column">
+            <h3 class="section-title">Future</h3>
+            <div class="section-description">
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+                <p>Email : info@gmail.com</p>
+                <p>Phone : 01500 00 00 00</p>
+                <div class="social-links">
+                <a href=""><img src="/images/icons/fb.png" alt=""></a>
+                <a href=""><img src="/images/icons/twitter.png" alt=""></a>
+                <a href=""><img src="/images/icons/youtube.png" alt=""></a>
+            </div>
+            </div>
+            
+        </div>
+        <div class="footer-column">
+            <div class="contact">
+            <h3 class="section-title">Subscribe</h3>
+            <input type="email" name="" id="" placeholder="Enter your email">
+            <button class="banner2-button">Subscribe</button>
+        </div>
+        </div>
+
+    </footer>
 </body>
 </html>
