--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <div class="footer-column">
             <div class="contact">
             <h3 class="section-title">Subscribe</h3>
-            <input type="email" name="" id="" placeholder="Enter your email">
+            <input class="place" type="email" name="" id="" placeholder="Enter your email">
             <button class="banner2-button">Subscribe</button>
         </div>
         </div>
